--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <div class="card">
                     <a href="product.html">
                       
-                      <img class="medium" src="./images.rar/p1.jpg" alt="product" />
+                      <img class="medium" src="./images/p1.jpg" alt="product" />
                     </a>
                     <div class="card-body">
                       <a href="product.html">
@@ -45,7 +45,7 @@
                         <span> <i class="fa fa-star"></i> </span>
                         <span> <i class="fa fa-star"></i> </span>
                       </div>
-                      <div class="price">$1200</div>
+                      <div class="price">$1400</div>
                     </div>
                   </div>
                   <div class="card">
@@ -64,7 +64,7 @@
                         <span> <i class="fa fa-star"></i> </span>
                         <span> <i class="fa fa-star"></i> </span>
                       </div>
-                      <div class="price">$1200</div>
+                      <div class="price">$1800</div>
                     </div>
                   </div>
                   <div class="card">
@@ -83,7 +83,7 @@
                         <span> <i class="fa fa-star"></i> </span>
                         <span> <i class="fa fa-star"></i> </span>
                       </div>
-                      <div class="price">$1200</div>
+                      <div class="price">$1700</div>
                     </div>
                   </div>
                   <div class="card">
@@ -102,7 +102,7 @@
                         <span> <i class="fa fa-star"></i> </span>
                         <span> <i class="fa fa-star"></i> </span>
                       </div>
-                      <div class="price">$1200</div>
+                      <div class="price">$1600</div>
                     </div>
                   </div>
                   <div class="card">
@@ -121,7 +121,7 @@
                         <span> <i class="fa fa-star"></i> </span>
                         <span> <i class="fa fa-star"></i> </span>
                       </div>
-                      <div class="price">$1200</div>
+                      <div class="price">$1850</div>
                     </div>
                   </div>
                   <div class="card">
@@ -140,7 +140,7 @@
                         <span> <i class="fa fa-star"></i> </span>
                         <span> <i class="fa fa-star-half-o"></i> </span>
                       </div>
-                      <div class="price">$1200</div>
+                      <div class="price">$1350</div>
                     </div>
                   </div>
                 </div>
